# baseuff

./: .env.example  .gitignore  CLAUDE.md  README.md  nova-chave.sh  pyproject.toml
deploy/: EXPOSICAO.md
deploy/apache/: ultron-mcp-location.conf
deploy/cloudflare/: README.md  worker.js  wrangler.toml
deploy/modal/: baseuff_replica.py
docker/: compose.yml
docs/: ARQUITETURA.md  GUIA_AGENTE_SBPC.md
scripts/: crawl.py  crawl_citsmart.py  crawl_guia.py  crawl_sbpc.py  download.py  enrich_sti_kb.py  eval.py  eval_sbpc.py  quantize.py  query_stats.py  reindex_payload.py  replica.sh  serve.py  sync_replica.py  update.py
