[project]
name = "baseuff"
version = "0.1.0"
description = "Servidor MCP de RAG sobre a base de conhecimento aberta da UFF"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uff-core",
    "uff-ingest",
    "uff-server",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/ingest", "packages/server"]

[tool.uv.sources]
uff-core = { workspace = true }
uff-ingest = { workspace = true }
uff-server = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "respx>=0.21",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
# embed não é membro do workspace (deps de GPU); seus testes rodam nos hosts GPU
# ou localmente com: PYTHONPATH=packages/embed uv run --with pymupdf pytest packages/embed/tests
addopts = "-q --import-mode=importlib --ignore=packages/embed"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Fixtures de teste têm dados reais (URLs longas, HTML) — não force quebra de linha.
"**/tests/**" = ["E501"]
